--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
